# visa-dispute-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  BANK_STYLE_VALIDATION.md  COMPLETE_SYSTEM_GUIDE.md  DEPLOYMENT.md  DEPLOY_NOW.md  DOCKER_QUICKSTART.md  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.render  EMAIL_SETUP_GUIDE.md  FINAL_DEPLOYMENT_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  FINAL_WORKING_GUIDE.md  FIX_RENDER_DEPLOYMENT.md  GITHUB_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  Makefile  PROJECT_COMPLETE.md  PROJECT_COMPLETION_REPORT.md  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART_FINAL.md  QUICK_DEPLOY_COMMANDS.md  QUICK_EMAIL_SETUP.md  README.md  README_FINAL.md  SENDGRID_SETUP.md  SETUP_INSTRUCTIONS.md  SETUP_YOUR_EMAIL.md  SUCCESS_SUMMARY.md  TESTING.md  VERCEL_DEPLOYMENT.md  WEB_INTERFACE_GUIDE.md  alembic.ini  (+14 more)
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/: index.py
app/: __init__.py
app/agents/: __init__.py  dispute_graph.py
app/api/: __init__.py  main.py  monitoring.py  security.py  web_ui.py
app/config/: settings.py
app/db/: __init__.py  audit_logger.py  connection.py  connection_simple.py  human_review.py  schema.sql  vector_store.py
app/schema/: __init__.py  models.py  state.py
app/tools/: __init__.py  (+8 more)
scripts/: extract_visa_rules.py  extracted_visa_rules.json  load_test.py  run_tests.sh  seed_chromadb.py  seed_chromadb_from_pdf.py  startup.sh  verify_installation.py  wait_for_services.py
tests/: __init__.py  conftest.py
(+18 files in other folders)
